# Basic-Fun

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  req.py  shipto_moc_api.py
basicfun810/: Cargo.toml
basicfun810/src/: main.rs  main_backup.rs  order_structure.rs
basicfun856/: Cargo.toml
basicfun856/src/: main.rs  main_backup.rs  order_structure.rs  prism_structure.rs
roxmltree_to_serde/: Cargo.toml
roxmltree_to_serde/src/: lib.rs  tests.rs
src/: 131484233.json  K00012.json  MichaelTodd_SPASCIENCES_SPA-CVS_CVSPROD_IB_850_8743610_20260310_104556.post.json  PostOrders.py  main.rs  main_940.rs  main_945__.rs  main_backup.rs  main_basic_fun.rs  main_compare.rs  main_login.rs  order_structure.rs  order_structure_test.rs  test.rs
