[package]
name = "basic_fun"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
reqwest = { version = "0.11", features = ["blocking", "json", "cookies", "cookie_store"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"